UI updates for single user send. Too many User updates causing issue with User dropdown flickering - needs thought and reworking!

--- a/public/index.css
+++ b/public/index.css
@@ -208,7 +208,8 @@ button {
   font-style: italic;
 }
 
-.chat div input {
+.chat div input,
+.chat div select {
   background-color: var(--bg-input);
   color: var(--fg-input);
   border: 1px solid var(--bd);
